--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,14 +17,14 @@ body {
   height: 100vh;
 }
 html, body, #root, .app-root {
-  background-color: #9e7070 !important;
+  background-color:#0f3c4c !important;
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  color: #062e70
+  color: #0f3c4c
   margin: 0;
   padding: 0;
-  font-size: 28px;
+  font-size: 27px;
 }
 
 .root {
